--- a/_config.yml
+++ b/_config.yml
@@ -160,7 +160,7 @@ ticketsTitle: "Ingressos"
 ticketsInfo: "Os ingressos dos workshops dão acesso a todos os workshops no dia 10 de dezembro e os ingressos da conferência dão acesso a todas as trilhas no dia 11 de dezembro. Ingressos dos workshops não serão aceitos para entrada na conferência e ingressos da conferência não serão aceitos para entrada nos workshops.<br><br>A entrada com ingressos de estudantes será permitida somente com a apresentação de um comprovante válido (carteirinha, boleto de mensalidade, etc.). Em caso de não apresentação de um comprovante válido, a entrada será negada e os ingressos não serão reembolsados e nem será aceito pagamento da diferença para adquirir o ingresso inteiro."
 ticketsOffers:
  -
-  name: "Workshops 10/12"
+  name: "Workshops (10/12)"
   price: "150,00"
   priceCurrency: "R$"
   ticketsNumber: "60"
@@ -176,7 +176,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Workshops 10/12 Estudante"
+  name: "Workshops [Estudante] (10/12)"
   price: "75,00"
   priceCurrency: "R$"
   ticketsNumber: "40"
@@ -192,7 +192,7 @@ ticketsOffers:
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Conferência 11/12 <br> Normal Bird"
+  name: "Palestras (11/12)"
   price: "150,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -203,12 +203,12 @@ ticketsOffers:
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "25/10/2019T00:00"
-  validThrough: "25/11/2019T23:59"
+  validThrough: "29/11/2019T23:59"
   disabled: false
   soldOut: false
   soldOutText: "Esgotado"
  -
-  name: "Conferência 11/12 <br> Normal Bird Estudante"
+  name: "Palestras [Estudante] (11/12)"
   price: "75,00"
   priceCurrency: "R$"
   ticketsNumber: "100"
@@ -219,7 +219,7 @@ ticketsOffers:
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
   validFrom: "25/10/2019T00:00"
-  validThrough: "25/11/2019T23:59"
+  validThrough: "29/11/2019T23:59"
   disabled: false
   soldOut: false
   soldOutText: "Esgotado"
@@ -249,7 +249,7 @@ ticketsOffers:
   buyButtonText: "Comprar"
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "25/11/2019T00:00"
+  validFrom: "29/11/2019T00:00"
   validThrough: "11/12/2019T23:59"
   disabled: true
   soldOut: false
@@ -265,43 +265,43 @@ ticketsOffers:
   buyButtonText: "Comprar"
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "25/11/2019T00:00"
+  validFrom: "29/11/2019T00:00"
   validThrough: "11/12/2019T23:59"
   disabled: true
   soldOut: false
   soldOutText: "Esgotado"
- -
-  name: "Conferência 11/12 <br> Early Bird"
-  price: "100,00"
-  priceCurrency: "R$"
-  ticketsNumber: "100"
+# -
+#  name: "Conferência 11/12 <br> Early Bird"
+#  price: "100,00"
+#  priceCurrency: "R$"
+#  ticketsNumber: "100"
   # ribbon: "-20%"
   # featured: true
-  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
-  buyButtonText: "Comprar"
+#  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
+#  buyButtonText: "Comprar"
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "11/09/2019T00:00"
-  validThrough: "25/10/2019T23:59"
-  disabled: false
-  soldOut: true
-  soldOutText: "Esgotado"
- -
-  name: "Conferência 11/12 <br> Early Bird Estudante"
-  price: "50,00"
-  priceCurrency: "R$"
-  ticketsNumber: "100"
+#  validFrom: "11/09/2019T00:00"
+#  validThrough: "25/10/2019T23:59"
+#  disabled: false
+#  soldOut: true
+#  soldOutText: "Esgotado"
+# -
+#  name: "Conferência 11/12 <br> Early Bird Estudante"
+#  price: "50,00"
+#  priceCurrency: "R$"
+#  ticketsNumber: "100"
   # ribbon: "-20%"
   # featured: true
-  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
-  buyButtonText: "Comprar"
+#  buyButtonLink: "https://www.eventbrite.com.br/e/datafest-2019-tickets-74291398573"
+#  buyButtonText: "Comprar"
   # additionalInfo: "Requires a valid student ID at the conference check in. Without student ID at the check in, ticket will be cancelled without refund"
   # ticketContentList: ["Lorem ipsum is simply", "Dummy text of the printing", "Typesetting industry"]
-  validFrom: "11/09/2019T00:00"
-  validThrough: "25/10/2019T23:59"
-  disabled: false
-  soldOut: true
-  soldOutText: "Esgotado"
+#  validFrom: "11/09/2019T00:00"
+#  validThrough: "25/10/2019T23:59"
+#  disabled: false
+#  soldOut: true
+#  soldOutText: "Esgotado"
 
 # Footer
 socialLinks:
