--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -507,7 +507,7 @@
   id: 517
   name: "Graziela"
   surname: "Brandão de Lima"
-  company: "DHF Advogados"
+  company: "BL Consultoria Digital"
   title: "Advogada"
   bio: "Advogada com atuação profissional nas áreas de Direito Digital e Compliance, com foco em proteção de dados e criptoativos. Mestra em Ciências Humanas e Sociais Aplicadas pela Faculdade de Ciências Aplicadas da UNICAMP. Pesquisadora na linha Mudanças Tecnológicas e Condição Humana. Professora coordenadora do Curso de Direito Digital e Indústria 4.0 da Escola Superior de Direito de Campinas. Graduada em Direito pela Universidade Federal de Alagoas. Participante do Laboratório de Tecnologia, Sociedade e Democracia (LATESD) da UNICAMP. Community Builder do movimento Women In Blockchain Campinas. Coordenadora do Grupo de Trabalho Ambiente Regulatório da Associação Campinas Tech. Vice-presidente da Comissão de Direito Digital da Subseção da OAB em Limeira/SP e Co-organizadora no Legal Hackers Campinas."
   thumbnailUrl: GrazielaBrandao.jpeg
