--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -353,7 +353,7 @@
   thumbnailUrl: IvanMarin.jpeg
   rockstar: false
   social:
-    - { name: "linkedin", link: "https://linkedin.com/in/ivanmarin" }  
+    - { name: "linkedin", link: "https://www.linkedin.com/in/ispmarin/" }  
 
 # Kenji Hiraoka
 -
